--- a/css/menu.css
+++ b/css/menu.css
@@ -18,22 +18,21 @@
     font-size: 40px;
     color: var(--sea);
 }
-.menu-right{
-    margin-top: 28px;
+
+.menu-right, .top-head{
     font-weight: 500;
     font-size:18px;
     margin-right: 20px;
 }
 
-.menu-right a{
+.menu-right a, .top-head a{
     text-decoration: none;
 }
 
 .menu-right ul{
     display: flex;
-    gap: 30px;
-    justify-content: center;
-    align-items: center;
+    gap: 20px;
+    margin: 0 auto;
 }
 
 .menu-right li{
@@ -50,51 +49,37 @@
 .top-head{
     display: none;
 }
-@media (max-width:750px)
-{
+
+@media(max-width: 1270px){
+    .menu-right{
+        display: none;
+    }
     .top-head{
         display: block;
         text-align: center;
+        background-color: var(--cyprus);
+        padding: 10px 0;
+    }
+    .top-head a{
+        color: #ffffff;
     }
     .top-icon{
-        padding:10px;
+        padding:0 30px;
     }
-    .menu-right{
-        display:none;
+    .navspace{
+        justify-content: flex-end;
+        margin-right: 20px;
     }
 }
 
+@media (max-width: 516px) {
 
-
-
-
-<div class="container pb-5">
-        <div class="row">
-            <div class="col-md-12">
-                <h2 class="sec-main-title">Gallery</h2>
-
-                <div class="j-mixitup">
-                    <div class="mb-3 text-center">
-                        <button type="button" class="btn btn-primary mixitup-control" data-filter="all">All</button>
-
-                        <?php foreach ($photos as $item): ?>
-                        <button type="button" class="btn btn-primary mixitup-control" data-filter=".j-item-<?= $item['id'] ?>">
-                            <?= hentities($item['title']) ?>
-                        </button>
-                        <?php endforeach; ?>
-                    </div>
-            
-                    <div class="form-row">
-                        <?php foreach ($photos as $item): ?>
-                        <?php foreach ($item['images'] as $v): ?>
-                        <div class="col-sm-6 col-md-4 mixitup-item mb-2 j-item-<?= $item['id'] ?>">
-                            <img class="img-fluid" src="images/photos/thumb/<?= $v ?>" alt>
-                        </div>
-                        <?php endforeach; ?>
-                        <?php endforeach; ?>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div>
-
+    .top-head{
+        font-size: 16px;
+        margin: 0;
+    }
+    .top-icon{
+       padding: 0 5px;
+    }
+    
+}
