--- a/css/main.css
+++ b/css/main.css
@@ -17,6 +17,8 @@ body{
   scroll-behavior: smooth;
   overflow-x: hidden;
   border: 1px solid red;
+  width: 100vw;
+  overflow-x: hidden !important;
 }
 
 .page-header{
