Change About Page Bg

--- a/css/about.css
+++ b/css/about.css
@@ -1,5 +1,5 @@
 .fea-cons{
-    background-image: url("/images/feature-bg.jpg");
+    background-image: url("/images/yellow-concrete-textured-background.jpg");
     background-repeat: no-repeat;
     background-size: cover;
     padding:40px;
