--- a/css/gallery.css
+++ b/css/gallery.css
@@ -7,3 +7,35 @@
     min-height: 250px;
     max-height: 250px;
 }
+.gal-item img{
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+}
+
+@media (max-width: 1200px) {
+    .gal-box{
+        display: grid;
+        grid-template-columns: repeat(4, 1fr);
+    }
+}
+
+@media (max-width: 992px) {
+    .gal-box{
+        display: grid;
+        grid-template-columns: repeat(3, 1fr);
+    }
+}
+
+@media (max-width: 768px) {
+    .gal-box{
+        display: grid;
+        grid-template-columns: repeat(2, 1fr);
+    }
+}
+@media (max-width: 530px) {
+    .gal-box{
+        display: grid;
+        grid-template-columns: repeat(1, 1fr);
+    }
+}
