--- a/css/main.css
+++ b/css/main.css
@@ -19,11 +19,22 @@ body{
 }
 
 .page-header{
-  padding: 50px 0;
+  height: 250px;
   margin: 0 0 50px 0;
-  background-image: url(../images/city-coast.webp);
+  background-image: url(../images/bg.jpg);
+  background-position: 0px -100px;
+  background-repeat: no-repeat;
+  background-size: cover;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  overflow: hidden;
+}
+
+.page-header h2{
+  font-weight: 900;
   color:white;
-  text-align: center;
+  font-size: 50px;
 }
 
 .cursive-text{
@@ -52,6 +63,12 @@ body{
 @media (max-width: 575px){
   .bold-title{
     font-size: 25px !important;
+  }
+  .page-header{
+    height: 150px;
+  }
+  .page-header h2{
+    font-size: 30px;
   }
 }
 
